criação da página de campões

--- a/Website/public/index.html
+++ b/Website/public/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class="navegacao">
             <button id="select">História</button>
-            <button>Campeões</button>
+            <button onclick="window.location = 'campeoes.html'">Campeões</button>
             <button>Figuras Históricas</button>
             <button id="quiz" onclick="analisar()">Quiz</button>
             <button id="dashboard" onclick="window.location = 'dashboard.html'">Dashboard</button>
