correção da linkagem da pagina xadrez.html

--- a/Website/public/index.html
+++ b/Website/public/index.html
@@ -17,7 +17,7 @@
         <div class="navegacao">
             <button id="select">História</button>
             <button onclick="window.location = 'campeoes.html'">Campeões</button>
-            <button>Figuras Históricas</button>
+            <button onclick="window.location = 'xadrez.html'">Área de Jogo</button>
             <button id="quiz" onclick="analisar()">Quiz</button>
             <button id="dashboard" onclick="window.location = 'dashboard.html'">Dashboard</button>
         </div>
