--- a/Website/public/xadrez.html
+++ b/Website/public/xadrez.html
@@ -16,7 +16,7 @@
         </div>
         <div class="navegacao">
             <button onclick="window.location = 'index.html'">História</button>
-            <button onclick="window.location = 'campeos.html'">Campeões</button>
+            <button onclick="window.location = 'campeoes.html'">Campeões</button>
             <button id="select">Área de Jogo</button>
             <button id="quiz" onclick="analisar()">Quiz</button>
             <button id="dashboard" onclick="window.location = 'dashboard.html'">Dashboard</button>
