--- a/Website/public/index.html
+++ b/Website/public/index.html
@@ -101,7 +101,7 @@
         </div>
     </main>
     <footer>
-        
+        <h2>© 2025 ChessCode. Todos os direitos reservados.</h2>
     </footer>
 </body>
 
