realização da tela de inicio de quiz

--- a/Website/public/quizes.html
+++ b/Website/public/quizes.html
@@ -90,7 +90,13 @@
         </ul>
     </aside>
     <main id="usarquiz" class="inicioQuiz">
-
+        <div class="textosQuiz">
+            <h1>Desafie sua mente no tabuleiro do saber!</h1>
+            <p>Responda aos quizes e descubra o quanto você sabe sobre xadrez.</p>
+        </div>
+        <div class="imagemQuiz">
+            <img src="assets/img/pecas_quiz.svg" alt="">
+        </div>
     </main>
     <main id="quiz">
         <button onclick="finalizar()" class="btnConcluir">Desistir</button>
