reescrita do texto da história do xadrez

--- a/Website/public/index.html
+++ b/Website/public/index.html
@@ -47,12 +47,8 @@
     <main class="europa">
         <div class="filtro">
             <section>
-                <h1>O Xadrez Chega à Europa</h1>
-                <p>Desde seus humildes começos na Índia até se tornar um fenômeno global, o xadrez tem cativado mentes
-                    ao longo dos séculos. Esse jogo de estratégia, considerado um "esporte mental", não só desafiou
-                    grandes pensadores, mas também foi testemunha de revoluções culturais e avanços tecnológicos.
-                    Acompanhe-nos em uma jornada fascinante pela história deste jogo dos reis que continua sendo tão
-                    relevante hoje quanto era há mil anos.</p>
+                <h1>Os Primeiros Movimentos: Chaturanga</h1>
+                <p>A história do xadrez começa na Índia, no século VI, com um jogo chamado chaturanga. Esse precursor do xadrez moderno era jogado em um tabuleiro de 8x8 e representava uma simulação de batalha. As peças representavam diferentes unidades militares, como a infantaria, os cavalos e os elefantes. Embora o chaturanga fosse um jogo muito popular, foi sua evolução para o shatranj que realmente marcou o início do que conhecemos hoje.</p>
             </section>
         </div>
     </main>
@@ -91,12 +87,8 @@
     <main class="moderno">
         <div class="filtro">
             <section>
-                <h1>O Xadrez Chega à Europa</h1>
-                <p>Desde seus humildes começos na Índia até se tornar um fenômeno global, o xadrez tem cativado mentes
-                    ao longo dos séculos. Esse jogo de estratégia, considerado um "esporte mental", não só desafiou
-                    grandes pensadores, mas também foi testemunha de revoluções culturais e avanços tecnológicos.
-                    Acompanhe-nos em uma jornada fascinante pela história deste jogo dos reis que continua sendo tão
-                    relevante hoje quanto era há mil anos.</p>
+                <h1>O Xadrez Moderno Surge</h1>
+                <p>No século XIX, o xadrez deu um salto para o mundo moderno. Em 1886, aconteceu o primeiro Campeonato Mundial de Xadrez, onde Wilhelm Steinitz se consagrou como o primeiro campeão mundial oficial. À medida que o xadrez se profissionalizava, figuras lendárias como Bobby Fischer, Anatoly Karpov e Garry Kasparov dominaram as competições, levando o jogo a novos patamares.</p>
             </section>
         </div>
     </main>
